correções de layout

--- a/app/src/main/res/layout/activity_pop_up_eleger.xml
+++ b/app/src/main/res/layout/activity_pop_up_eleger.xml
@@ -54,11 +54,12 @@
             android:id="@+id/btnVetar"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/pop_cancelar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="Vetar"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -87,10 +88,11 @@
             android:id="@+id/btnSimEleger"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/pop_selecionar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="SIM"
             android:textColor="#F5ECD9"
             app:layout_constraintEnd_toEndOf="parent"
