--- a/app/src/main/res/layout/activity_pop_up_votar.xml
+++ b/app/src/main/res/layout/activity_pop_up_votar.xml
@@ -55,11 +55,12 @@
             android:id="@+id/btnCancelarVotar"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="28dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="28dp"
             android:background="@drawable/pop_cancelar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="Cancelar"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -84,10 +85,11 @@
             android:id="@+id/btnSimVotar"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/pop_selecionar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="SIM"
             android:textColor="#F5ECD9"
             app:layout_constraintEnd_toEndOf="parent"
