--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,8 +28,8 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginEnd="8dp"
-                    android:background="#E84D5B"
                     android:fontFamily="@font/latoblackitalic"
+                    android:background="@drawable/pop_selecionar"
                     android:text="ENTRAR NO JOGO"
                     android:textAlignment="center"
                     android:textColor="#F5ECD9"
@@ -50,6 +50,7 @@
                     android:fontFamily="@font/lato"
                     android:hint="Senha"
                     android:inputType="text|textUri|textEmailAddress"
+                    android:maxLength="10"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +65,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginEnd="8dp"
-                    android:background="#E84D5B"
+                    android:background="@drawable/pop_selecionar"
                     android:fontFamily="@font/latoblackitalic"
                     android:text="CRIAR UM JOGO"
                     android:textAlignment="center"
@@ -86,6 +87,7 @@
                     android:fontFamily="@font/lato"
                     android:hint="Nome da Sala"
                     android:inputType="text|textUri|textEmailAddress"
+                    android:maxLength="10"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +106,7 @@
                     android:fontFamily="@font/lato"
                     android:hint="Seu Nome"
                     android:inputType="text|textUri|textEmailAddress"
+                    android:maxLength="10"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintEnd_toEndOf="parent"
