--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
         android:layout_height="81dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="216dp"
-        android:fontFamily="@font/latoregular"
+        android:layout_marginBottom="200dp"
+        android:fontFamily="@font/latoblackitalic"
+        android:background="@drawable/pop_selecionar"
         android:text="JOGAR"
         android:textSize="30sp" />
 
