--- a/app/src/main/res/layout/activity_pop_up_selecionar.xml
+++ b/app/src/main/res/layout/activity_pop_up_selecionar.xml
@@ -20,10 +20,11 @@
             android:id="@+id/btnCancelarSelecionar"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="40dp"
             android:background="@drawable/pop_cancelar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="Cancelar"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,10 +35,11 @@
             android:id="@+id/btnSenador"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="44dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="44dp"
             android:background="@drawable/pop_selecionar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="VEREADOR"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toTopOf="@+id/btnCancelarSelecionar"
@@ -48,10 +50,11 @@
             android:id="@+id/btnGovernador"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/pop_selecionar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="GORVERNADOR"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toTopOf="@+id/btnPrefeito"
@@ -62,10 +65,11 @@
             android:id="@+id/btnPrefeito"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/pop_selecionar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="PREFEITO"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toTopOf="@+id/btnSenador"
@@ -76,11 +80,12 @@
             android:id="@+id/btnVereador"
             android:layout_width="218dp"
             android:layout_height="49dp"
-            android:layout_marginBottom="12dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="12dp"
             android:background="@drawable/pop_selecionar"
+            android:fontFamily="@font/latoblackitalic"
             android:text="VEREADOR"
             android:textColor="#F5ECD9"
             app:layout_constraintBottom_toTopOf="@+id/btnGovernador"
