--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -626,6 +626,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:alpha="1"
                     android:background="@drawable/pop_bg"
                     android:fontFamily="@font/latoblackitalic"
                     android:text="Candidato" />
